Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
       <section>
         <h1>[opmlfeed]</h1>
 
-<p>opmlfeed is an opmlfeed subscription service.</p>
+<p>opmlfeed is an opmlfeed subscription service. The name is somewhat
+misleading now; while it originally served OPML files, now it serves
+JSON containing feed information suitable for constructing an OPML
+file on the client.</p>
 
 <h2>Dependencies</h2>
 
